--- a/CRACKED.csproj
+++ b/CRACKED.csproj
@@ -247,6 +247,8 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\image\image %281%29.png" />
+    <Content Include="Models\image\image %282%29.png" />
     <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
@@ -320,6 +322,8 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\RegistroUsuarios.cshtml" />
     <Content Include="Views\User\inicioSesion.cshtml" />
+    <Content Include="Views\User\Productos.cshtml" />
+    <Content Include="Views\User\Galletas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
