--- a/CRACKED.csproj
+++ b/CRACKED.csproj
@@ -208,9 +208,6 @@
     <Compile Include="Models\SABOR.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\sysdiagram.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\TIPO_PRODUCTO.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -242,13 +239,19 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\Imagen\image %283%29.png" />
+    <Content Include="Content\Imagen\image %284%29.png" />
+    <Content Include="Content\Imagen\image %285%29.png" />
+    <Content Include="Content\Imagen\image %286%29.png" />
+    <Content Include="Content\Imagen\image %287%29.png" />
+    <Content Include="Content\Imagen\image %288%29.png" />
     <Content Include="Content\Imagen\image.png" />
     <Content Include="Content\Imagen\Sin título.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Models\image\image %281%29.png" />
-    <Content Include="Models\image\image %282%29.png" />
+    <Content Include="Content\Imagen\image %281%29.png" />
+    <Content Include="Content\Imagen\image %282%29.png" />
     <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
@@ -324,6 +327,9 @@
     <Content Include="Views\User\inicioSesion.cshtml" />
     <Content Include="Views\User\Productos.cshtml" />
     <Content Include="Views\User\Galletas.cshtml" />
+    <Content Include="Views\User\Cookiecakes.cshtml" />
+    <Content Include="Views\User\Detalle_Cookiecakes.cshtml" />
+    <Content Include="Views\User\Detalle_Galletas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
