--- a/CRACKED.csproj
+++ b/CRACKED.csproj
@@ -154,19 +154,7 @@
     <Compile Include="Models\AUDITORIA.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\CAJA.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\CAJA_PRODUCTO.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\CIUDAD.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\COMBO.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\COMBO_PRODUCTO.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DEPARTAMENTO.cs">
@@ -208,9 +196,6 @@
     <Compile Include="Models\SABOR.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\sysdiagram.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\TIPO_PRODUCTO.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -242,6 +227,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\Imagen\cookies_3858837.png" />
     <Content Include="Content\Imagen\image %283%29.png" />
     <Content Include="Content\Imagen\image %284%29.png" />
     <Content Include="Content\Imagen\image %285%29.png" />
@@ -249,7 +235,12 @@
     <Content Include="Content\Imagen\image %287%29.png" />
     <Content Include="Content\Imagen\image %288%29.png" />
     <Content Include="Content\Imagen\image.png" />
+    <Content Include="Content\Imagen\motorcycle.png" />
+    <Content Include="Content\Imagen\package.png" />
+    <Content Include="Content\Imagen\people_3239045.png" />
+    <Content Include="Content\Imagen\report_2912794.png" />
     <Content Include="Content\Imagen\Sin título.jpg" />
+    <Content Include="Content\Imagen\statistics_1580913.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -333,6 +324,10 @@
     <Content Include="Views\User\Cookiecakes.cshtml" />
     <Content Include="Views\User\Detalle_Cookiecakes.cshtml" />
     <Content Include="Views\User\Detalle_Galletas.cshtml" />
+    <Content Include="Views\Shared\_Layout - Admin.cshtml" />
+    <Content Include="Views\User\IndexAdmin.cshtml" />
+    <Content Include="Views\Shared\_LayoutDomiciliario.cshtml" />
+    <Content Include="Views\User\IndexDomiciliario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
