--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="BCrypt.Net-Next" version="3.3.3" targetFramework="net48" />
   <package id="bootstrap" version="5.3.3" targetFramework="net48" />
+  <package id="bootstrap.less" version="3.4.1" targetFramework="net48" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.17.49" targetFramework="net48" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.49" targetFramework="net48" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net48" />
@@ -18,6 +21,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.3" targetFramework="net48" />
