--- a/CRACKED.csproj
+++ b/CRACKED.csproj
@@ -177,16 +177,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Model1.cs" />
+    <Compile Include="Models\Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Model1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Model11.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PEDIDO.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -201,9 +200,6 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SABOR.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TIPO_PRODUCTO.cs">
@@ -268,7 +264,7 @@
     <Content Include="Models\Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model11.cs</LastGenOutput>
+      <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap-datetimepicker.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.min.js" />
@@ -432,6 +428,13 @@
     <Content Include="Views\User\Detalle_Galletas_CookieNute.cshtml" />
     <Content Include="Views\User\Detalle_Galletas_Rainbow.cshtml" />
     <Content Include="Views\Admin\InfoUsuarios.cshtml" />
+    <Content Include="Views\Admin\Pedidos.cshtml" />
+    <Content Include="Views\Admin\Productos.cshtml" />
+    <Content Include="Views\Admin\Reportes.cshtml" />
+    <Content Include="Views\Admin\DatosUsuario.cshtml" />
+    <Content Include="Views\Admin\AgregarProducto.cshtml" />
+    <Content Include="Views\Admin\DetallePedido.cshtml" />
+    <Content Include="Views\Admin\ProductosPedido.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
