--- a/CRACKED.csproj
+++ b/CRACKED.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Dtos\CarroDto.cs" />
     <Compile Include="Dtos\PedidoDto.cs" />
+    <Compile Include="Dtos\PedidoListDto.cs" />
     <Compile Include="Dtos\Pedido_ProductoDto.cs" />
     <Compile Include="Dtos\ProductDto.cs" />
     <Compile Include="Dtos\ProductListDto.cs" />
@@ -204,9 +205,6 @@
     <Compile Include="Models\SABOR.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\sysdiagram.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\TIPO_PRODUCTO.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -215,6 +213,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CarritoRepository.cs" />
+    <Compile Include="Repositories\PedidoRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="Repositories\User_AdminRepository.cs" />
@@ -446,9 +445,15 @@
     <Content Include="Views\Domiciliario\Pedidos.cshtml" />
     <Content Include="Views\Domiciliario\DetallesPedidos.cshtml" />
     <Content Include="Views\Domiciliario\ProductosPedidos.cshtml" />
+    <Content Include="Views\Admin\EditarProducto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\PedidoListDto\" />
+    <Folder Include="Views\PedidoRepository\" />
+    <Folder Include="Views\Productos\" />
+    <Folder Include="Views\Producto\" />
+    <Folder Include="Views\Product\" />
     <Folder Include="Views\Userr\" />
   </ItemGroup>
   <ItemGroup>
