--- a/packages.config
+++ b/packages.config
@@ -23,6 +23,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Moment.js" version="2.9.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.3" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
